--- a/my-frontend/src/index.css
+++ b/my-frontend/src/index.css
@@ -17,3 +17,11 @@ code {
 h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
 }
+
+/* Set a background color for the entire document */
+html, body {
+  background-color: black; /* Change this to your desired background color */
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
